# express24

./: pyproject.toml  pytest.ini  todo
apps/: admin.py  documentations.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
apps/models/: __init__.py  base.py  products.py  proxies.py  users.py
apps/views/: viewsAdmin.py  viewsCourier.py  viewsOrder.py
root/: settings.py  urls.py
